--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,51 @@
 *{
     margin: 0;
     padding: 0;
+    list-style: none;
+    text-decoration: none;
+}
+
+:root{
+    --font-primary: "Rajdhani", serif;
+    --font-secundary: "Open Sans Condensed", serif;
+    --font-action: "Open Sans Condensed", serif;
+}
+
+.hamburguer{
+    width: 2rem;
+    height: 2rem;
+    position: fixed;
+    z-index: 100;
+    right: 2rem;
+    top: 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    cursor: pointer;
+}
+
+.show-menu .hamburguer{
+    right: 16rem;
+}
+
+.line{
+    width: 100%;
+    height: .1rem;
+    background-color: white;
+    box-shadow: 0.1rem 0.1rem 1px black;
+}
+
+.show-menu #line1{
+    transform: rotate(45deg) translate(.3rem, .4rem);
+}
+
+.show-menu #line2{
+    opacity: 0;
+    visibility: hidden;
+}
+
+.show-menu #line3{
+    transform: rotate(125deg) translate(-.3rem, .3rem);
 }
 
 header{
@@ -48,7 +93,7 @@ header{
 .banner h1{
     color: #ffffff;
     font-size: 3.5rem;
-    font-family: "Rajdhani", serif;
+    font-family: var(--font-primary);
     font-weight: 400;
     text-shadow: .2rem .4rem rgba(0, 0, 0, .4);
     margin-bottom: 1rem;
@@ -59,7 +104,7 @@ header{
 .banner p{
     color: #ffffff;
     font-size: 2rem;
-    font-family: "Open Sans Condensed", serif;
+    font-family: var(--font-secundary);
     font-weight: 100;
     text-shadow: .2rem .4rem rgba(0, 0, 0, .4);
     margin-bottom: 2rem;
@@ -71,7 +116,7 @@ header{
     color: #ffffff;
     font-size: 1.2rem;
     text-transform: uppercase;
-    font-family: "Open Sans Condensed", serif;
+    font-family: var(--font-action);
     background-color: #05A;
     background: #0575E6;  /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #021B79, #0575E6);  /* Chrome 10-25, Safari 5.1-6 */
@@ -85,15 +130,75 @@ header{
 }
 .banner button:hover{
     opacity: 0.8;
-    color: black;
+    color: gray;
 }
 
 @keyframes moveBanner {
     0%{
-        transform: translateY(10rem) rotateY(-30deg);
+        transform: translateY(10rem) rotateX(300deg);
     }
     100%{
         transform: translateY(0) rotateY(0);
         opacity: 1;
     }    
+}
+
+.sidebar{
+    width: 20rem;
+    height: 100vh;
+    background-color: white;
+    position: fixed;
+    top: 0;
+    right: -20rem;
+    transition: all 0.5s;
+}
+
+.show-menu .sidebar{
+    right: 0;
+}
+
+.menu{
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.menu-item{
+    text-align: center;
+    margin-bottom: 1rem;
+}
+
+.menu-link{
+    font-family: var(--font-action);
+    font-size: 2rem;
+    color: gray;
+    transition: color 0.5s;
+}
+
+.menu-link:hover{
+    color: #0575E6;
+}
+
+.social-media{
+    position: absolute;
+    bottom: 2rem;
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.social-media i{
+    color: #0575E6;
+    height: 2.5rem;
+    width: 2.5rem;
+    font-size: 2.5rem;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    transition: color 0.5s;
+}
+
+.social-media i:hover{
+    color: #021B79;
 }
