--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,9 @@
 }
 
 .show-menu #line1{
-    transform: rotate(45deg) translate(.3rem, .4rem);
+    transform: rotate(45deg) translate(.3rem, .45rem);
+    background-color: gray;
+    box-shadow: none;
 }
 
 .show-menu #line2{
@@ -49,7 +51,9 @@
 }
 
 .show-menu #line3{
-    transform: rotate(125deg) translate(-.3rem, .3rem);
+    transform: rotate(135deg) translate(-.3rem, .45rem);
+    background-color: gray;
+    box-shadow: none;
 }
 
 header{
@@ -201,4 +205,93 @@ header{
 
 .social-media i:hover{
     color: #021B79;
+}
+
+.conhecimentos{
+    display: grid;
+    grid-template-columns: repeat(16, 1fr);
+    grid-template-rows: repeat(6, 6rem);
+    row-gap: .5rem;
+}
+
+.conhecimento:nth-child(1){
+    grid-column: 4 / 7;
+    grid-row: 1 / 3;
+}
+
+.conhecimento:nth-child(2){
+    grid-column: 3 / 6;
+    grid-row: 3 / 5;
+}
+
+.conhecimento:nth-child(3){
+    grid-column: 4 / 7;
+    grid-row: 5 / -1;
+}
+
+.conhecimento:nth-child(4){
+    grid-column: 11 / 14;
+    grid-row: 1 / 3;
+}
+
+.conhecimento:nth-child(5){
+    grid-column: 12 / 15;
+    grid-row: 3 / 5;
+}
+
+.conhecimento:nth-child(6){
+    grid-column: 11 / 14;
+    grid-row: 5 / -1;
+}
+
+.secao-conhecimentos{
+    background-color:#f5f5f5;
+
+}
+
+.secao-header{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.secao-header h1{
+    font-family: var(--font-primary);
+    font-size: 3rem;
+    color: gray;
+    border-bottom: solid 3px #0575E6;
+    margin-bottom: 3rem;
+}
+
+.conhecimento-header{
+    display: flex;
+    align-items: center;
+    color: gray;
+}
+
+.conhecimento-header i{
+    font-size: 3rem;
+}
+
+.conhecimento-header h3{
+    font-family: var(--font-secundary);
+    font-size: 2rem;
+    padding-left: 1rem;
+}
+
+.conhecimento-text{
+    font-family: var(--font-secundary);
+    margin-top: 1rem;
+    text-align: justify;
+}
+
+.conhecimento-img-wrapper{
+    grid-column: 7 / 11;
+    grid-row: 2 / 6;
+    width: 100%;
+}
+
+.conhecimento-img-wrapper img{
+    object-fit: cover;
+    width: 100%;
 }
